# CEPrender

./: .gitignore  Cargo.toml  README.markdown
cepchoose/: cepchoose.py  parse_christian.py  renderer.py  util_image.py  util_math.py
src/: main.rs
