[package]
name = "swiss_parse"
version = "0.1.0"
authors = ["Benjamin Blundell <me@benjamin.computer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
rand_distr = "*"
probability = "*"
nalgebra = "0.16.0"
image = "*"
argparse = "0.2.2"
pbr = "*"
scoped_threadpool = "*"
fitrs = "*"
ndarray = "0.12.0"
#hdf5 = "0.5.2"
hdf5 = { path = "../hdf5-rust" }